# mac-system-ocr

./: .gitignore  .prettierrc.json  CMakeLists.txt  LICENSE  README.md  binding.gyp  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: pr-ci.yml  release.yml
examples/: demo.js
github/workflows/: release.yml
lib/: binding.c  index.d.ts  index.js  ocr.h  ocr.mm
src/: index.d.ts  index.js
test/: MacOCR.test.js  binding.test.js  createTestImage.js  memory.js  perform.js  testImageCreation.js
